--- a/web_server/5-design_a_beautiful_404_page.html
+++ b/web_server/5-design_a_beautiful_404_page.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>404 - Oops! Page Not Found</title>
+    <title>404 - Not Found</title>
     <style>
         body {
-            font-family: 'Comic Sans MS', cursive, sans-serif;
-            background-color: #ffecb3;
+            font-family: 'Roboto', sans-serif;
+            background-color: #f7f7f7;
             color: #333;
             text-align: center;
             padding: 50px;
@@ -18,6 +18,7 @@
             font-size: 5em;
             margin: 0;
             color: #e74c3c;
+            text-shadow: 3px 3px 5px rgba(0, 0, 0, 0.3);
         }
 
         p {
@@ -29,22 +30,23 @@
         img {
             max-width: 80%;
             height: auto;
-            border-radius: 15px;
             margin-top: 20px;
+            border-radius: 10px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
         }
 
         a {
-            color: #3498db;
             text-decoration: none;
+            color: #3498db;
             font-weight: bold;
-            font-size: 1.2em;
         }
     </style>
 </head>
 <body>
     <h1>404</h1>
-    <p>Oops! Looks like you're lost in cyberspace.</p>
+    <p>Ceci n'est pas une page</p>
+    <p>This is not the page you're looking for...</p>
     <img src="image.jpg" alt="Creative 404 Image">
-    <p><a href="https://example.com">Go back to the home page</a></p>
+    <p>But you can <a href="/">return to the home page</a>.</p>
 </body>
 </html>
